--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
         <artifactId>maven-assembly-plugin</artifactId>
         <version>3.2.0</version>
         <configuration>
+          <archive>
+            <manifest>
+              <mainClass>
+                com.noisyapple.App
+              </mainClass>
+            </manifest>
+          </archive>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
